[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_unordered = "0.3.5"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde-enum-str = "0.4.0"
itertools = "0.12.0"
rangemap = "1.4.0"
rayon = "1.8.0"